@@ -1,5 +1,11 @@
 2012-06-13  Jeffrey Stedfast  <fejj@gnome.org>
 
+	* gmime/gmime-message.c: When setting a header, make sure to
+	always clear the header list cache of the toplevel mime_part as
+	well.
+
+2012-06-13  Jeffrey Stedfast  <fejj@gnome.org>
+
 	* gmime/gmime-param.c (rfc2184_param_new): Only decode the charset
 	and lang if the parameter is actually encoded. Thanks to Peter
 	Bloomfield for this patch.
